# pybind_cmake_example_crossbuild

./: .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: wheels.yml
